# pumpfoil

./: .gitignore  CLAUDE.md  Makefile  README.md
server/: .env.example  pyproject.toml  record_snapshot.py  requirements.txt
server/app/: __init__.py  accounts.py  config.py  db.py  fitimport.py  foil_physics.py  mailer.py  main.py  media.py  merge.py  models.py  naming.py  notify.py  places.py  pumptruth.py  push.py  ratelimit.py  reanalysis.py  records.py  schemas.py  security.py  sharecard.py  spots.py  storage.py  tcximport.py  tzlookup.py  videos.py  weather.py
server/app/analysis/: __init__.py  features_per_sec.py  foil_model.py  geo.py  gps.py  preview.py
server/app/api/: admin.py  appmeta.py  auth.py  chat.py  community.py  coros.py  deps.py  devices.py  feedback.py  foils.py  ingest.py  ml.py  oauth.py  polar.py  push.py  sessions.py  settings.py  strava.py  suunto.py  transfers.py
server/app/data/: foils.json
server/app/ml/: __init__.py  dataset.py  features.py  pumps.py  train.py
server/scripts/: accel_speed_experiment.py  backup_db.py  calibrate_dock.py  delete_test_accounts.py  eval_foilstatus.py  foil_model_experiment.py  migrate_sqlite_to_pg.py  pump_ab.py  pump_cadence_calibrate.py  pump_cadence_peaks.py  pump_calibrate.py  pump_gate_eval.py  pump_refractory_ab.py  reanalyze_all.py  retrain_foil_model.py  train_foil_model.py  train_from_storage.py
server/tests/: conftest.py  test_analysis.py  test_api.py  test_fitimport.py  test_foil_physics.py  test_ml_api.py  test_pump_insights.py  test_pumps.py  test_pumptruth.py  test_train.py
(+410 files in other folders)
