[project]
name = "foil-server"
version = "0.1.0"
description = "Pump-Foil-Tracker backend: ingest, analysis, web API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic[email]>=2.6",
    "pyjwt>=2.8",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
    "fitparse>=1.2",
    "Pillow>=10.0",
    "psycopg[binary]>=3.1",
    "pywebpush>=2.0",
]

[project.optional-dependencies]
ml = ["scipy>=1.12", "scikit-learn>=1.4", "pandas>=2.2"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.api", "app.analysis", "app.ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
